--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -3,7 +3,8 @@
     {{!-- Sheet Header --}}
     <header class="sheet-header">
       <div class="header-fields">
-        {{#GM}}<button style="width:150px;" data-activeCheck>{{#if system.activePartymember}}Active Party Member{{else}}Inactive Party Member{{/if}}</button>{{/GM}}
+            {{#GM}}<button style="width:150px;" data-activeCheck>{{#if system.activePartymember}}Active Party Member{{else}}Inactive Party Member{{/if}}</button>{{/GM}}
+            <button style="width:150px;" data-editToggle>{{#if system.editToggle}}Edit Mode: On{{else}}Edit Mode: Off{{/if}}</button>
         <table>
           <tr>
             <td>
