--- a/templates/actor/status/skills.hbs
+++ b/templates/actor/status/skills.hbs
@@ -10,15 +10,17 @@
     </button>
   </div>
   <div>
-    <div class="flex justify-center gap-5">
-      <button class="w-auto no-background" data-statSubtraction data-stat="{{ skill.id }}" data-type="skills">
-        <i class="fas fa-minus-square "></i>
-      </button>
-      <span class="skillvalue">{{skill.value}}</span>
-      <button class="w-auto no-background" data-statAddition data-stat="{{ skill.id }}" data-type="skills">
-        <i class="fas fa-plus-square"></i>
-      </button>
-    </div>
+      <div class="flex justify-center gap-5" style="vertical-align:middle">
+          {{#if ../system.editToggle}}<button class="w-auto no-background" data-statSubtraction data-stat="{{ skill.id }}" data-type="skills">
+              <i class="fas fa-minus-square "></i>
+          </button>
+          {{/if}}
+          <span class="skillvalue" {{#unless ../system.editToggle}}style="margin-top:10px;"{{/unless}}>{{skill.value}}</span>
+          {{#if ../system.editToggle}}<button class="w-auto no-background" data-statAddition data-stat="{{ skill.id }}" data-type="skills">
+              <i class="fas fa-plus-square"></i>
+          </button>
+          {{/if}}
+      </div>
   </div>
   {{/each}}
 </div>
