--- a/css/base.css
+++ b/css/base.css
@@ -35,12 +35,32 @@
   width: 100%;
 }
 
+.px-0 {
+  padding: 0px;
+}
+
 .p-1 {
   padding: 5px;
 }
 
 .p-2 {
   padding: 10px;
+}
+
+.mr-1 {
+  margin-right: 5px;
+}
+
+.mr-2 {
+  margin-right: 10px;
+}
+
+.ml-1 {
+  margin-left: 5px;
+}
+
+.ml-2 {
+  margin-left: 10px;
 }
 
 .mx-1 {
@@ -58,4 +78,12 @@ button > i {
 button {
   background-color: var(--dark);
   color: var(--user-color);
+}
+
+button > i:hover {
+  color: white;
+}
+
+.no-border {
+  border: 0;
 }
