--- a/templates/item/item-explosive-sheet.hbs
+++ b/templates/item/item-explosive-sheet.hbs
@@ -9,11 +9,7 @@
     </div>
   </header>
 
-  {{!-- Sheet Tab Navigation --}}
-  <nav class="sheet-tabs tabs" data-group="primary">
-    <a class="item" data-tab="description">Description</a>
-    <a class="item" data-tab="effects">Effects</a>
-  </nav>
+ 
   <table class="equipped-stats">
     <tr>
       <td>Cost</td>
@@ -52,12 +48,21 @@
       <td><input type="text" name="system.damageType2" value="{{ system.damageType2 }}" /></td>
     </tr>
   </table>
-
+ {{!-- Sheet Tab Navigation --}}
+  <nav class="sheet-tabs tabs" data-group="primary">
+    <a class="item" data-tab="description">Description</a>
+    <a class="item" data-tab="crafting">Crafting</a>
+    <a class="item" data-tab="effects">Effects</a>
+  </nav>
   {{!-- Sheet Body --}}
   <section class="sheet-body">
     {{!-- Description Tab --}}
     <div class="tab" item-description data-group="primary" data-tab="description" style="padding: 20px">
       {{editor system.properties target="system.properties" button=true engine="prosemirror"}}
+    </div>
+    {{!-- Crafting Tab --}}
+    <div class="tab crafting" data-group="primary" data-tab="crafting">
+      {{> "systems/arcane-arcade-fallout/templates/item/parts/item-crafting.hbs"}}
     </div>
     {{!-- Effects Tab --}}
     <div class="tab effects" data-group="primary" data-tab="effects">
