--- a/templates/item/item-rangedWeapon-sheet.hbs
+++ b/templates/item/item-rangedWeapon-sheet.hbs
@@ -64,6 +64,7 @@
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="description">Description</a>
+    <a class="item" data-tab="crafting">Crafting</a>
     <a class="item" data-tab="upgrades" id="upgradesTab">Upgrades</a>
     <a class="item" data-tab="effects">Effects</a>
   </nav>
@@ -144,6 +145,10 @@
       <h3>Notes:</h3>
       {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the rollData prop. --}}
       {{editor system.description target="system.description" rollData=rollData button=true owner=owner engine="prosemirror" editable=editable}}
+    </div>
+    {{!-- Crafting Tab --}}
+    <div class="tab crafting" data-group="primary" data-tab="crafting">
+      {{> "systems/arcane-arcade-fallout/templates/item/parts/item-crafting.hbs"}}
     </div>
     {{!-- Upgrades Tab --}}
     <div class="tab" data-armor-id data-group="primary" data-tab="upgrades">
