Revamped Junk Breakdown & mats

--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -53,7 +53,7 @@
       <a class="item" data-tab="items">COMBAT</a>
       <a class="item" data-tab="medicine">AID</a>
       <a class="item" data-tab="backpack">BACKPACK</a>
-      <a class="item" data-tab="crafting">CRAFTING</a>
+      <a class="item" data-tab="crafting" id="craftingNav">CRAFTING</a>
       <a class="item" data-tab="notes">NOTES</a>
       <a class="item" data-tab="effects">EFFECTS</a>
     </nav>
