--- a/templates/actor/items/equipped-ranged-weapons.hbs
+++ b/templates/actor/items/equipped-ranged-weapons.hbs
@@ -123,7 +123,7 @@
 
                         </tr>
                         <tr style="vertical-align: middle">
-                            <td style="width: 100px; border-right: none">
+                            <td style="width: 100px; border-right: none" title="0 is Broken, 10 is Full Functionality">
                                 CND:
                                 <input title="0 is Broken, 10 is Full Functionality"
                                        style="width: 50px"
@@ -134,12 +134,31 @@
                                        data-weapon-id="{{ item._id }}" />
                             </td>
                             <td colspan="3" style="border-left: none">
-                                <progress style="width: 100%; padding-right: 5px"
-                                          class="statusbar stamina"
-                                          value="{{ item.system.decay }}"
-                                          max="10">
-                                    {{ item.system.decay }}
-                                </progress>
+                                <div style="float:left;">
+                                    <i style="padding: 3px;float:right"
+                                    data-reduce-decay
+                                    data-field="item.system.decay"
+                                    data-fieldvalue="{{item.system.decay}}"
+                                    data-weapon-id="{{ item._id }}"
+                                    class="fas fa-minus-square fakebutton nobackground">
+                                    </i>
+                                </div>
+                                    <progress title="{{item.system.decay}} out of 10"
+                                            style="width:75%;"
+                                            class="statusbar"
+                                            value="{{ item.system.decay }}"
+                                            max=10>
+                                        {{ item.system.decay }}
+                                    </progress>
+                                <div style="float:right;">
+                                    <i style="padding: 3px;float:left"
+                                    data-add-decay
+                                    data-field="item.system.decay"
+                                    data-fieldvalue="{{item.system.decay}}"
+                                    data-weapon-id="{{ item._id }}"
+                                    class="fas fa-plus-square fakebutton nobackground">
+                                    </i>
+                                </div>
                             </td>
                         </tr>
                     </table>
