--- a/templates/item/item-condition-sheet.hbs
+++ b/templates/item/item-condition-sheet.hbs
@@ -28,8 +28,10 @@
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="description">Description</a>
+    {{#DifferentFrom item.type "condition"}}
     <a class="item" data-tab="notes">Notes</a>
     <a class="item" data-tab="crafting">Crafting</a>
+    {{/DifferentFrom}}
     <a class="item" id ="customEffectsNav" data-tab="customEffects">Reactions</a>
     <a class="item" data-tab="effects">Effects</a>
   </nav>
