--- a/templates/actor/items/equipped-ranged-weapons.hbs
+++ b/templates/actor/items/equipped-ranged-weapons.hbs
@@ -15,18 +15,9 @@
                             <td colspan="999">DETAILS</td>
                         </tr>
                         <tr>
-                            <td>AP</td>
-                            <td>Load</td>
-                            <td>Str</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <div>
-                                    {{ item.system.apCost }}
-                                </div>
-                            </td>
-                            <td>{{ item.system.load }}</td>
-                            <td>{{ item.system.strengthRequirement }}</td>
+                            <td>AP: {{ item.system.apCost }}</td>
+                            <td>Load: {{ item.system.load }}</td>
+                            <td>Str: {{ item.system.strengthRequirement }}</td>
                         </tr>
                     </table>
                     <table class="equipped-stats">
@@ -60,15 +51,11 @@
                     {{#GM}}
                     <table class="equipped-stats">
                         <tr>
-                            <td>Ability</td>
                             <td>
                                 <select style="width: 100%" data-set-ability data-weapon-id="{{ item._id }}">
                                     {{selectOptions ../system.abilities selected=item.system.abilityMod valueAttr="abbr" labelAttr="label" blank="None"}}
                                 </select>
                             </td>
-                        </tr>
-                        <tr>
-                            <td>Skill</td>
                             <td>
                                 <select style="width: 100%" data-set-skill data-weapon-id="{{ item._id }}">
                                     {{selectOptions ../system.skills selected=item.system.skillBonus valueAttr="id" labelAttr="label" blank="None"}}
@@ -108,7 +95,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td>
+                            <td style="min-width:100px;">
                                 {{ item.system.ammo.capacity.value }} / {{ item.system.ammo.capacity.max }}
                                 <i title="Reloaded {{ system.reloadDecay }} Times | 10 Reloads = 1 Level of Decay"
                                    data-reload
@@ -125,17 +112,17 @@
                         <tr style="vertical-align: middle">
                             <td style="width: 100px; border-right: none" title="0 is Broken, 10 is Full Functionality">
                                 CND:
-                                <input title="0 is Broken, 10 is Full Functionality"
+                               {{#if editToggle}} <input title="0 is Broken, 10 is Full Functionality"
                                        style="width: 50px"
                                        type="number"
                                        name="{{ item.system.decay }}"
-                                       value="{{ item.system.decay }}"
+                                       value="{{/if}}{{ item.system.decay }}{{#if editToggle}}"
                                        data-set-decay
-                                       data-weapon-id="{{ item._id }}" />
+                                       data-weapon-id="{{ item._id }}" />{{/if}}
                             </td>
                             <td colspan="3" style="border-left: none">
                                 <div style="float:left;">
-                                    <i style="padding: 3px;float:right"
+                                    <i style="padding: 2px;float:right"
                                     data-reduce-decay
                                     data-field="item.system.decay"
                                     data-fieldvalue="{{item.system.decay}}"
@@ -151,7 +138,7 @@
                                         {{ item.system.decay }}
                                     </progress>
                                 <div style="float:right;">
-                                    <i style="padding: 3px;float:left"
+                                    <i style="padding: 2px;float:left"
                                     data-add-decay
                                     data-field="item.system.decay"
                                     data-fieldvalue="{{item.system.decay}}"
