--- a/templates/item/item-meleeWeapon-sheet.hbs
+++ b/templates/item/item-meleeWeapon-sheet.hbs
@@ -83,45 +83,38 @@
           </td>
         </tr>
         <tr>
-          {{#if system.consumesAmmo}}
           <td>Ammo Type</td>
           <td>Capacity</td>
-          {{/if}}
           <td>Load</td>
           <td>CND</td>
         </tr>
         <tr>
-          {{#if system.consumesAmmo}}
-          <td>
-            <input type="text" name="system.ammo.type" value="{{ system.ammo.type }}" />
-          </td>
-          <td style="display: flex; align-items: center">
-            <input
-              type="number"
-              name="system.ammo.capacity.value"
-              value="{{ system.ammo.capacity.value }}"
-            />
-            /
-            <input
-              type="number"
-              name="system.ammo.capacity.max"
-              value="{{ system.ammo.capacity.max }}"
-            />
-          </td>
-          {{/if}}
-          <td>
-            <input type="number" name="system.load" value="{{ system.load }}" />
-          </td>
-          <td>
-            <input
-              title="0 is Broken, 10 is Full Functionality"
-              type="number"
-              name="{{ item.system.decay }}"
-              value="{{ item.system.decay }}"
-              data-set-decay
-              data-weapon-id="{{ item._id }}"
-            />
-          </td>
+            <td>
+                <input type="text" name="system.ammo.type" value="{{ system.ammo.type }}" />
+            </td>
+            <td>
+                <input type="text" name="system.ammo.assigned" value="{{ system.ammo.assigned }}" />
+            </td>
+            <td style="display: flex; align-items: center">
+                <input type="number"
+                       name="system.ammo.capacity.value"
+                       value="{{ system.ammo.capacity.value }}" />
+                /
+                <input type="number"
+                       name="system.ammo.capacity.max"
+                       value="{{ system.ammo.capacity.max }}" />
+            </td>
+            <td>
+                <input type="number" name="system.load" value="{{ system.load }}" />
+            </td>
+            <td>
+                <input title="0 is Broken, 10 is Full Functionality"
+                       type="number"
+                       name="{{ item.system.decay }}"
+                       value="{{ item.system.decay }}"
+                       data-set-decay
+                       data-weapon-id="{{ item._id }}" />
+            </td>
         </tr>
       </table>
 
